traces/bug_903.txt
examples++-load/msh3.cpp:4809: error: DEAD_STORE
  The value written to &m (type Fem2D::Mesh3*) is never used.
Showing all 1 steps of the trace


examples++-load/msh3.cpp:4809:3: Write of unused value
4807.     ffassert(pTh);
4808.     Mesh3 &Th=*pTh;
4809.     Mesh3 *m= pTh;   // question a quoi sert *m ??
          ^
4810.     int nbv=Th.nv; // nombre de sommet 
4811.     int nbt=Th.nt; // nombre de triangles
